<resources>
    <string name="app_name">Secret Notes</string>
    <string name="title">Title</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="date">date</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edited">(edited)</string>
    <string name="write_your_note_here">Write your note here.</string>
    <string name="write_a_title_here">Write a title here.</string>
    <string name="add_note">Add Note</string>
    <string name="save_note">Save Note</string>
    <string name="delete_note">Delete Note</string>
</resources>