<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/note_color"
    android:orientation="vertical"
    tools:context=".feature_note.presentation.add_edit_notes.AddEditNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/write_a_title_here"
            android:padding="10dp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonDeleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="10dp"
            android:clickable="true"
            android:contentDescription="@string/delete_note"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_delete"
            android:visibility="gone" />

    </LinearLayout>


    <TextView
        android:id="@+id/textViewIsEdited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edited"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/write_your_note_here"
        android:padding="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:clickable="true"
        android:contentDescription="@string/save_note"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_save" />

</LinearLayout>